syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Auth(AuthenticationMessage) returns (UserMessage) {}
}

message AuthenticationMessage {
  string token = 1;
}

message UserMessage{
  //  dones't support _id
  string id = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;

  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;

}